tests/parser/fail/invalid-escape.som
"test:
fail-message:
  regex: escape sequence .+ invalid
"

InvalidEscape = (
  run = (
    'this is an invalid escape sequence: \u'.
  )
)
